RESOLVED FIXED29391
[Qt] QtWebKit: ESC key does not clear the text of the line edit when canceling an input method
https://bugs.webkit.org/show_bug.cgi?id=29391
Summary [Qt] QtWebKit: ESC key does not clear the text of the line edit when cancelin...
Tor Arne Vestbø
Reported 2009-09-18 07:15:20 PDT
This bug report originated from issue QTBUG-2580 <http://bugreports.qt.nokia.com/browse/QTBUG-2580> --- Description --- When using the 'scim' (and possibly others) input method to enter text into a QLineEdit, the normal behavior is that pressing the 'Esc' key will close the input method and clear the text. This works in normal line edits, but does not work properly when entering the text in a line edit on a webpage because the input method is closed, but the text is not cleared.
Attachments
Patch (3.12 KB, patch)
2010-12-17 17:15 PST, Jan Erik Hanssen
no flags
Patch (6.32 KB, patch)
2010-12-22 12:41 PST, Jan Erik Hanssen
no flags
Jocelyn Turcotte
Comment 1 2010-03-17 11:17:11 PDT
Reproduced on Windows 7 IME with Qt 4.7 and WebKit r55520 I'm setting the priority by guessing to P3, I don't use IME often so if somebody confirms that this can be annoying we can reevaluate the priority.
Jan Erik Hanssen
Comment 2 2010-12-17 17:15:01 PST
Created attachment 76926 [details] Patch The problem is that the composition text is never cleared while it should be when the editor is in composition mode and an empty QInputMethodEvent is received
Alexey Proskuryakov
Comment 3 2010-12-17 17:21:47 PST
Can a regression test be added for this? We have some ways to simulate input method behavior in DumpRenderTree, although I don't know if those work with Qt.
Jan Erik Hanssen
Comment 4 2010-12-22 12:41:05 PST
Created attachment 77250 [details] Patch Change the Qt test case to a generic one
Alexey Proskuryakov
Comment 5 2010-12-23 17:03:07 PST
Comment on attachment 77250 [details] Patch Thanks for making a nice regression test!
WebKit Commit Bot
Comment 6 2010-12-23 18:53:54 PST
Comment on attachment 77250 [details] Patch Clearing flags on attachment: 77250 Committed r74605: <http://trac.webkit.org/changeset/74605>
WebKit Commit Bot
Comment 7 2010-12-23 18:54:00 PST
All reviewed patches have been landed. Closing bug.
Jessie Berlin
Comment 8 2010-12-24 10:49:28 PST
The new test should also have been added to the skip list for Windows, since DRT's textInputController is unimplemented on Windows: https://bugs.webkit.org/show_bug.cgi?id=32021 I will land the change to the windows skip list shortly.
Jessie Berlin
Comment 9 2010-12-24 10:55:28 PST
Committed the change to the Windows Skip list in r74641: http://trac.webkit.org/changeset/74641
Eric Seidel (no email)
Comment 10 2010-12-28 20:40:08 PST
Chromium is fixing their port to match this test in bug 51693.
Note You need to log in before you can comment on or make changes to this bug.