2010-12-23  Jan Erik Hanssen  <jhanssen@sencha.com>

Reviewed by Alexey Proskuryakov.

        [Qt] Composition text is not removed from the editor when composition is cancelled
        https://bugs.webkit.org/show_bug.cgi?id=29391

        Ensure that the composition text is cleared when an empty QInputMethodEvent
        is received and the editor is in composition mode.

        * editing/input/ime-composition-clearpreedit-expected.txt: Added.
        * editing/input/ime-composition-clearpreedit.html: Added.
        * platform/gtk/Skipped:
        * platform/mac-wk2/Skipped:
        * platform/qt-wk2/Skipped:
2010-12-23  Jan Erik Hanssen  <jhanssen@sencha.com>

        Reviewed by Alexey Proskuryakov.

        [Qt] Composition text is not removed from the editor when composition is cancelled
        https://bugs.webkit.org/show_bug.cgi?id=29391

        Ensure that the composition text is cleared when an empty QInputMethodEvent
        is received and the editor is in composition mode.

        * Api/qwebpage.cpp:
        (QWebPagePrivate::inputMethodEvent):

git-svn-id: svn://svn.chromium.org/blink/trunk@74605 bbb929c8-8fbe-4397-9dbb-9b2b20218538